Change image paths to relative URLs in gallery
Updated image paths in the gallery to use relative URLs.

--- a/index.html
+++ b/index.html
@@ -140,20 +140,20 @@
               </div>
 
             <div class="gallery-grid" id="gallery1">
-              <div class="gallery-item wide-panoramic" data-index="0" data-type="image" data-full="assets/images/banner.s1.png">
-                <div style="background-image:url('assets/images/banner.s1.png');background-size:cover;background-position:center;width:100%;height:100%"></div>
+              <div class="gallery-item wide-panoramic" data-index="0" data-type="image" data-full="./banner.s1.png">
+                <div style="background-image:url('./banner.s1.png');background-size:cover;background-position:center;width:100%;height:100%"></div>
               </div>
 
-              <div class="gallery-item portrait-9-16" data-index="1" data-type="image" data-full="assets/images/1.s1.png">
-                <div style="background-image:url('assets/images/1.s1.png');background-size:cover;background-position:center;width:100%;height:100%"></div>
+              <div class="gallery-item portrait-9-16" data-index="1" data-type="image" data-full="./1.s1.png">
+                <div style="background-image:url('./1.s1.png');background-size:cover;background-position:center;width:100%;height:100%"></div>
               </div>
 
               <div class="gallery-item portrait-9-16" data-index="2" data-type="carousel" data-carousel-size="4">
                 <div class="carousel-container">
-                  <div class="carousel-slide active" data-full="assets/images/2,1.s1.png" style="background-image:url('assets/images/2,1.s1.png')"></div>
-                  <div class="carousel-slide" data-full="assets/images/2,2.s1.png" style="background-image:url('assets/images/2,2.s1.png')"></div>
-                  <div class="carousel-slide" data-full="assets/images/2,3.s1.png" style="background-image:url('assets/images/2,3.s1.png')"></div>
-                  <div class="carousel-slide" data-full="assets/images/2,4.s1.png" style="background-image:url('assets/images/2,4.s1.png')"></div>
+                  <div class="carousel-slide active" data-full="./2,1.s1.png" style="background-image:url('./2,1.s1.png')"></div>
+                  <div class="carousel-slide" data-full="./2,2.s1.png" style="background-image:url('./2,2.s1.png')"></div>
+                  <div class="carousel-slide" data-full="./2,3.s1.png" style="background-image:url('./2,3.s1.png')"></div>
+                  <div class="carousel-slide" data-full="./2,4.s1.png" style="background-image:url('./2,4.s1.png')"></div>
                   <div class="carousel-indicator">1/4</div>
                 </div>
               </div>
@@ -210,8 +210,8 @@
 
               <div class="gallery-item portrait-9-16" data-index="32" data-type="carousel" data-carousel-size="2">
                 <div class="carousel-container">
-                  <div class="carousel-slide active" data-full="assets/images/7,1.s1.png" style="background-image:url('assets/images/7,1.s1.png')"></div>
-                  <div class="carousel-slide" data-full="assets/images/7,2.s1.png" style="background-image:url('assets/images/7,2.s1.png')"></div>
+                  <div class="carousel-slide active" data-full="assets/images/7,1.s1.png" style="background-image:url('./7,1.s1.png')"></div>
+                  <div class="carousel-slide" data-full="assets/images/7,2.s1.png" style="background-image:url('./7,2.s1.png')"></div>
                   <div class="carousel-indicator">1/2</div>
                 </div>
               </div>
