Update image and video paths to relative URLs

--- a/index.html
+++ b/index.html
@@ -293,8 +293,8 @@
               </div>
 
               <div class="gallery-grid" id="gallery3">
-                <div class="gallery-item wide-panoramic" data-index="0" data-type="image" data-full="assets/images/banner.s3.png">
-                  <div style="background-image:url('assets/images/banner.s3.png');background-size:cover;background-position:center;width:100%;height:100%"></div>
+                <div class="gallery-item wide-panoramic" data-index="0" data-type="image" data-full="./banner.s3.png">
+                  <div style="background-image:url('./banner.s3.png');background-size:cover;background-position:center;width:100%;height:100%"></div>
                 </div>
 
                 <div class="gallery-item portrait-9-16" data-index="1" data-type="carousel" data-carousel-size="5">
@@ -358,12 +358,12 @@
                   <div style="background-image:url('./6.s3.jpeg');background-size:cover;background-position:center;width:100%;height:100%"></div>
                 </div>
 
-                <div class="gallery-item portrait-9-16" data-index="33" data-type="video" data-video="assets/video/7.s3.mp4" data-full="assets/images/7.s3.png">
-                  <div style="background-image:url('assets/images/7.s3.png');background-size:cover;background-position:center;width:100%;height:100%;position:relative"><div class="video-play-icon"></div></div>
+                <div class="gallery-item portrait-9-16" data-index="33" data-type="video" data-video="./7.s3.mp4" data-full="./7.s3.png">
+                  <div style="background-image:url('./7.s3.png');background-size:cover;background-position:center;width:100%;height:100%;position:relative"><div class="video-play-icon"></div></div>
                 </div>
 
-                <div class="gallery-item portrait-9-16" data-index="34" data-type="video" data-video="assets/video/8.s3.mp4" data-full="assets/images/8.s3.png">
-                  <div style="background-image:url('assets/images/8.s3.png');background-size:cover;background-position:center;width:100%;height:100%;position:relative"><div class="video-play-icon"></div></div>
+                <div class="gallery-item portrait-9-16" data-index="34" data-type="video" data-video="./8.s3.mp4" data-full="./8.s3.png">
+                  <div style="background-image:url('./8.s3.png');background-size:cover;background-position:center;width:100%;height:100%;position:relative"><div class="video-play-icon"></div></div>
                 </div>
 
               </div>
